prevent menu from auto collapsing as a flex child

--- a/styles/components/_Layout.scss
+++ b/styles/components/_Layout.scss
@@ -22,7 +22,14 @@ $sider-width: 200px;
       justify-content: center;
     }
 
+    // prevent menu from auto collapsing as a flex child
+    // https://github.com/ant-design/ant-design/issues/30813#issuecomment-854625752
+    .menu {
+      flex: auto;
+    }
+
     .user {
+      font-size: 16px;
       color: grey;
       margin-left: auto;
     }
